# thrum-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
skills/thrum-install/: SKILL.md
skills/thrum-status/: SKILL.md
skills/thrum-uninstall/: SKILL.md
src/thrum_client/: backfill.py  buffer.py  cli.py  codex_config.py  config.py  cursor_config.py  emitter.py  groups_cli.py  handler.py  opt_out.py  safe_log.py  settings_merge.py
src/thrum_client/parsers/: codex_hook.py  codex_plan_detector.py  codex_rollout.py  cursor_hook.py  cursor_plan_detector.py  cursor_transcript.py  hook.py  plan_detector.py  transcript.py
tests/: conftest.py  test_backfill.py  test_cli_init.py  test_codex_backfill.py  test_codex_cli_init.py  test_codex_handler.py  test_codex_hook_parser.py  test_codex_plan_detector.py  test_codex_rollout_parser.py  test_cursor_backfill.py  test_cursor_config.py  test_cursor_handler.py  test_cursor_hook_parser.py  test_cursor_plan_detector.py  test_cursor_transcript.py  test_emit_end_to_end.py  test_emitter_unit.py  test_groups_cli.py  test_handler.py  test_hook_parser.py  test_personal_marker.py  test_plan_detector.py  test_sentinel_fuzz.py  test_settings_merge.py  test_transcript_parser.py
tests/fixtures/: hook_payloads.py  otlp_receiver.py  transcripts.py
