[project]
name = "thrum-client"
version = "0.1.0"
description = "Thrum activity client — hook-and-transcript OTLP emitter for Claude Code, Codex, and Cursor"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Thrum Labs" }]
keywords = ["claude-code", "codex", "cursor", "opentelemetry", "otlp", "ai-tracking", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "ijson>=3.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "click>=8.1",
    "opentelemetry-api>=1.41",
    "opentelemetry-sdk>=1.41",
    "opentelemetry-exporter-otlp-proto-http>=1.41",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "freezegun>=1.5",
    "fastapi>=0.115",
    "opentelemetry-proto>=1.41",
]

[project.urls]
Homepage = "https://github.com/thrum-labs/thrum-client"
Repository = "https://github.com/thrum-labs/thrum-client"
Issues = "https://github.com/thrum-labs/thrum-client/issues"

[project.scripts]
thrum = "thrum_client.cli:main"
thrum-hook = "thrum_client.handler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thrum_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
